2009-02-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinCursor.c: [Patch 2542828] use stock Win32 help arrow
	cursor when question_arrow requested (danckaert)

	* win/rc/*.cur: [Patch 2513104] fix cursor hotspots (cjmcdonald)

	* win/tkWinMenu.c: Applied patch for menu image display bug
	[Bug 1329198, 456299] [Patch 2507419] (cjmcdonald)

2009-02-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tcl.m4, win/configure: Check if cl groks _WIN64 already to
	avoid CC manipulation that can screw up later configure checks.
	Use 'd'ebug runtime in 64-bit builds.

2009-02-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/configure.in, win/configure: align better with tcl
	version. Ensures finding correct CPP for Win64.

2008-02-06  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkImgPhoto.c:		fix numerous leaks discovered with the
	* generic/tkMenu.c:		Mac OS X Instruments.app Leaks tool.
	* generic/tkText.c:
	* generic/tkTextImage.c:
	* generic/tkTextIndex.c:
	* generic/tkUndo.c:
	* generic/ttk/ttkFrame.c:
	* macosx/tkMacOSXWm.c:

2009-01-22  Kevin B. Kenny  <kennykb@acm.org>

	* unix/tcl.m4: Corrected a typo ($(SHLIB_VERSION) should be
	${SHLIB_VERSION}).
	* unix/configure: Autoconf 2.59
	
2009-01-19  Kevin B. Kenny  <kennykb@acm.org>

	* unix/Makefile.in: Added a CONFIG_INSTALL_DIR parameter so that
	* unix/tcl.m4:      distributors can control where tclConfig.sh goes.
	Made the installation of 'ldAix' conditional
	upon actually being on an AIX system.  Allowed for downstream
	packagers to customize SHLIB_VERSION on BSD-derived systems.
	Thanks to Stuart Cassoff for [Patch 907924].
	* unix/configure: Autoconf 2.59
	
2009-01-14  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkImgPhoto.c: fix for aMSN compatibility [tcl-Bug 2507326]

2009-01-11  George Peter Staplin  <georgeps@users.sourceforge.net>

	* generic/tkEvent.c: Backport a fix from 8.6 for a NULL pointer
	dereference in CreateXIC.

2009-01-07  Pat Thoyts  <patthoyts@users.sourceforge.net>